# fastapi-notebook-runner

./: Dockerfile  Jenkinsfile  README.md  config.json  deployment.yaml  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  script.ipynb
cockpit_fastapi/: executor.py  main.py  worker.py
helm/cockpit-fastapi/: .gitignore  values.yaml
helm/cockpit-fastapi/templates/: deployment.yaml  route.yaml
helm/ll-cockpit-fastapi/: Chart.yaml  values.yaml
helm/ll-cockpit-fastapi/templates/: configmap.yaml  secret.yaml  service.yaml
helm/nb-runner/: Chart.yaml  values.yaml
helm/nb-runner/templates/: _utils.tpl  configmap.yaml  deployment.yaml  ingress.yaml  route.yaml  secret.yaml  service.yaml
nb_runner/: main.py  worker.py
